examples/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dobby
  labels:
    app: dobby
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dobby
  template:
    metadata:
      labels:
        app: dobby
    spec:
      containers:
        - name: dobby
          image: thecasualcoder/dobby
          ports:
            - containerPort: 4444
          readinessProbe:
            httpGet:
              path: /readiness
              port: 4444
            initialDelaySeconds: 20
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 4444
            initialDelaySeconds: 20
            periodSeconds: 3
