examples/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dobby
spec:
  type: NodePort
  selector:
      app: dobby
  ports:
  - protocol: TCP
    port: 4444
    targetPort: 4444
