examples/kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: endgame-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: chennai.thecasualcoder.in
    http:
      paths:
      - path: /
        backend:
          serviceName: dobby
          servicePort: 4444
